syntax = "proto3";
package sso.roles_permissions;
option go_package = "sso.roles_permissions.v1;roles_permissions";

import "google/protobuf/timestamp.proto";

service RolePermissionService {
  rpc AddPermissionToRole (RolePermissionRequest) returns (RolePermissionResponse);
  rpc RemovePermissionFromRole (RolePermissionRequest) returns (OperationResponse);
  rpc ListRolePermissions (ListRolePermissionsRequest) returns (ListRolePermissionsResponse);
}

message RolePermissionRequest {
  string tenant_id = 1;           // Обязательный tenant
  string role_id = 2;
  string permission_id = 3;
}

message RolePermissionResponse {
  bool success = 1;
  google.protobuf.Timestamp created_at = 2;
  string message = 3;
}

message OperationResponse {
  bool success = 1;
  string message = 2;
}

message ListRolePermissionsRequest {
  string tenant_id = 1;           // Обязательный фильтр
  string role_id = 2;
  int32 page = 3;                 // Пагинация
  int32 page_size = 4;            // 1-100 элементов
}

message ListRolePermissionsResponse {
  message RolePermission {
    string permission_id = 1;
    string permission_code = 2;   // Добавлен код права
    google.protobuf.Timestamp created_at = 3;
  }

  repeated RolePermission permissions = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}